[tool.poetry]
name = "charge-phq434-a23"
version = "0.1.0"
description = ""
authors = ["AmdaUwU <jbat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qutip = "^4.7.3"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
